optimized with "StyleCop" , changed classes name to correctly

--- a/NET.W.2018.Novik.01/Sorts/Sorts.csproj
+++ b/NET.W.2018.Novik.01/Sorts/Sorts.csproj
@@ -40,7 +40,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="SortsHelper.cs" />
+    <Compile Include="SortsHelper.cs">
+      <ExcludeFromStyleCop>False</ExcludeFromStyleCop>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
