--- a/NET.W.2018.Novik.01/Tests/Tests.csproj
+++ b/NET.W.2018.Novik.01/Tests/Tests.csproj
@@ -48,7 +48,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="UnitTestSorts.cs" />
+    <Compile Include="SortsHelperTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
