--- a/NET.W.2018.Novik.03-04/Tasks.Tests/Tasks.Tests.csproj
+++ b/NET.W.2018.Novik.03-04/Tasks.Tests/Tasks.Tests.csproj
@@ -54,7 +54,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="GCDTests.cs" />
-    <Compile Include="ConvertToBitsStringTests.cs" />
+    <Compile Include="DoubleToBitsStringTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
