Removed all delegates from the code, corrected comments, refactoring

--- a/NET.W.2018.Novik.03-04/Tasks/Tasks.csproj
+++ b/NET.W.2018.Novik.03-04/Tasks/Tasks.csproj
@@ -52,5 +52,8 @@
     <Analyzer Include="..\packages\StyleCop.Analyzers.1.0.2\analyzers\dotnet\cs\StyleCop.Analyzers.CodeFixes.dll" />
     <Analyzer Include="..\packages\StyleCop.Analyzers.1.0.2\analyzers\dotnet\cs\StyleCop.Analyzers.dll" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Exceptions\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
