--- a/NET.W.2018.Novik.05/Logic.UnitTests/Logic.UnitTests.csproj
+++ b/NET.W.2018.Novik.05/Logic.UnitTests/Logic.UnitTests.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BubbleSortDelegateTests.cs" />
     <Compile Include="BubbleSortTests.cs" />
     <Compile Include="PolynomialTests\PolynomialBaseFuncTests.cs" />
     <Compile Include="PolynomialTests\PolynomialOperationTests.cs" />
