--- a/NET.S.2018.Novik.08/Books.Logic/Books.Logic.csproj
+++ b/NET.S.2018.Novik.08/Books.Logic/Books.Logic.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Book.cs" />
+    <Compile Include="CustomBookFormat.cs" />
     <Compile Include="Factories\BookListStorageFactory.cs" />
     <Compile Include="Factories\IBookListStorageFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
