--- a/NET.S.2018.Novik.08/Books.Logic/packages.config
+++ b/NET.S.2018.Novik.08/Books.Logic/packages.config
@@ -1,4 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="NLog" version="4.5.2" targetFramework="net461" />
+  <package id="NLog.Config" version="4.5.2" targetFramework="net461" />
+  <package id="NLog.Schema" version="4.5.2" targetFramework="net461" />
   <package id="StyleCop.Analyzers" version="1.0.2" targetFramework="net461" developmentDependency="true" />
 </packages>
