--- a/NET.S.2018.Novik.11-12/Logic/Logic.csproj
+++ b/NET.S.2018.Novik.11-12/Logic/Logic.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{397FF548-746E-44C0-9B88-0BB22B51A7D2}</ProjectGuid>
+    <ProjectGuid>{6121967C-94CD-4F7B-A086-ABCC850F8E98}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Books.Logic</RootNamespace>
-    <AssemblyName>Books.Logic</AssemblyName>
+    <RootNamespace>Logic</RootNamespace>
+    <AssemblyName>Logic</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,16 +30,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
-      <HintPath>..\packages\NLog.4.5.2\lib\net45\NLog.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
-    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
-    <Reference Include="System.IO.Compression" />
-    <Reference Include="System.Runtime.Serialization" />
-    <Reference Include="System.ServiceModel" />
-    <Reference Include="System.Transactions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -48,36 +40,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Book.cs" />
-    <Compile Include="CustomBookFormat.cs" />
-    <Compile Include="Factories\BookListStorageFactory.cs" />
-    <Compile Include="Factories\IBookListStorageFactory.cs" />
+    <Compile Include="BinarySearch.cs" />
+    <Compile Include="Clock\CoCoClock.cs" />
+    <Compile Include="Clock\RingEventArgs.cs" />
+    <Compile Include="Fibonacci.cs">
+      <ExcludeFromStyleCop>True</ExcludeFromStyleCop>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\BookAlreadyExistsException.cs" />
-    <Compile Include="Services\BookDoesNotExistException.cs" />
-    <Compile Include="Services\IService.cs" />
-    <Compile Include="Services\BookListService.cs" />
-    <Compile Include="SortByTag\SortsByAuthor.cs" />
-    <Compile Include="SortByTag\SortsByCount.cs" />
-    <Compile Include="SortByTag\SortsByName.cs" />
-    <Compile Include="SortByTag\SortsByPrice.cs" />
-    <Compile Include="SortByTag\SortsByPublisher.cs" />
-    <Compile Include="SortByTag\SortsByISBN.cs" />
-    <Compile Include="SortByTag\SortsByYearOfPublishing.cs" />
-    <Compile Include="Storage\IBookListStorage.cs" />
-    <Compile Include="Storage\BookListStorageBinaryFile.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="NLog.config" />
-    <None Include="NLog.xsd">
-      <SubType>Designer</SubType>
-    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <Analyzer Include="..\packages\StyleCop.Analyzers.1.0.2\analyzers\dotnet\cs\StyleCop.Analyzers.CodeFixes.dll" />
     <Analyzer Include="..\packages\StyleCop.Analyzers.1.0.2\analyzers\dotnet\cs\StyleCop.Analyzers.dll" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
