--- a/NET.S.2018.Novik.14-15/BLL.Tests/BLL.Tests.csproj
+++ b/NET.S.2018.Novik.14-15/BLL.Tests/BLL.Tests.csproj
@@ -61,6 +61,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BankAccountTests.cs" />
+    <Compile Include="BankAccountServiceTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
