--- a/NET.S.2018.Novik.16/DependencyResolver/DependencyResolver.csproj
+++ b/NET.S.2018.Novik.16/DependencyResolver/DependencyResolver.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{BF9726E8-D19F-49CA-AEFC-14FA0FF2ABEE}</ProjectGuid>
+    <ProjectGuid>{3CE7A4AB-20F7-4C79-B1B7-33AF112853DA}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>BLL.Interface</RootNamespace>
-    <AssemblyName>BLL.Interface</AssemblyName>
+    <RootNamespace>DependencyResolver</RootNamespace>
+    <AssemblyName>DependencyResolver</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,6 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Ninject, Version=3.3.4.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
+      <HintPath>..\packages\Ninject.3.3.4\lib\net45\Ninject.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -40,25 +43,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Entities\BankAccount.cs" />
-    <Compile Include="Entities\BaseAccount.cs" />
-    <Compile Include="Entities\GoldAccount.cs" />
-    <Compile Include="Entities\PlatinumAccount.cs" />
-    <Compile Include="Entities\TypeBankAccount.cs" />
-    <Compile Include="Exceptions\NotEnoughMoneyException.cs" />
-    <Compile Include="Interfaces\IBankAccountFactory.cs" />
-    <Compile Include="Interfaces\IBankAccountMapper.cs" />
-    <Compile Include="Interfaces\IBankAccountService.cs" />
-    <Compile Include="Interfaces\ICalculatorBonusPoints.cs" />
-    <Compile Include="Interfaces\IGeneratorId.cs" />
+    <Compile Include="NinjectConfig.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Analyzer Include="..\packages\StyleCop.Analyzers.1.0.2\analyzers\dotnet\cs\StyleCop.Analyzers.CodeFixes.dll" />
-    <Analyzer Include="..\packages\StyleCop.Analyzers.1.0.2\analyzers\dotnet\cs\StyleCop.Analyzers.dll" />
+    <ProjectReference Include="..\ExportToXML.Interface\ExportToXML.Interface.csproj">
+      <Project>{bca11b6a-a58b-4595-96b5-ffa3bb6918ef}</Project>
+      <Name>ExportToXML.Interface</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ExportToXML\ExportToXML.csproj">
+      <Project>{11bc3ea0-91fd-417f-bf56-3875bb08c770}</Project>
+      <Name>ExportToXML</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
