--- a/NET.S.2018.Novik.16/ExportToXML.Interface/ExportToXML.Interface.csproj
+++ b/NET.S.2018.Novik.16/ExportToXML.Interface/ExportToXML.Interface.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{BF9726E8-D19F-49CA-AEFC-14FA0FF2ABEE}</ProjectGuid>
+    <ProjectGuid>{BCA11B6A-A58B-4595-96B5-FFA3BB6918EF}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>BLL.Interface</RootNamespace>
-    <AssemblyName>BLL.Interface</AssemblyName>
+    <RootNamespace>ExportToXML.Interface</RootNamespace>
+    <AssemblyName>ExportToXML.Interface</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,25 +40,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Entities\BankAccount.cs" />
-    <Compile Include="Entities\BaseAccount.cs" />
-    <Compile Include="Entities\GoldAccount.cs" />
-    <Compile Include="Entities\PlatinumAccount.cs" />
-    <Compile Include="Entities\TypeBankAccount.cs" />
-    <Compile Include="Exceptions\NotEnoughMoneyException.cs" />
-    <Compile Include="Interfaces\IBankAccountFactory.cs" />
-    <Compile Include="Interfaces\IBankAccountMapper.cs" />
-    <Compile Include="Interfaces\IBankAccountService.cs" />
-    <Compile Include="Interfaces\ICalculatorBonusPoints.cs" />
-    <Compile Include="Interfaces\IGeneratorId.cs" />
+    <Compile Include="Interfaces\ICustomeLogger.cs" />
+    <Compile Include="Interfaces\IURLHelper.cs" />
+    <Compile Include="Interfaces\IURLSource.cs" />
+    <Compile Include="Interfaces\IXMLConverter.cs" />
+    <Compile Include="Interfaces\IXMLaver.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Analyzer Include="..\packages\StyleCop.Analyzers.1.0.2\analyzers\dotnet\cs\StyleCop.Analyzers.CodeFixes.dll" />
-    <Analyzer Include="..\packages\StyleCop.Analyzers.1.0.2\analyzers\dotnet\cs\StyleCop.Analyzers.dll" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
