--- a/NET.S.2018.Novik.16/ExportToXML/ExportToXML.csproj
+++ b/NET.S.2018.Novik.16/ExportToXML/ExportToXML.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{BF9726E8-D19F-49CA-AEFC-14FA0FF2ABEE}</ProjectGuid>
+    <ProjectGuid>{11BC3EA0-91FD-417F-BF56-3875BB08C770}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>BLL.Interface</RootNamespace>
-    <AssemblyName>BLL.Interface</AssemblyName>
+    <RootNamespace>ExportToXML</RootNamespace>
+    <AssemblyName>ExportToXML</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,8 +30,16 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
+      <HintPath>..\packages\NLog.4.5.3\lib\net45\NLog.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.IO.Compression" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.ServiceModel" />
+    <Reference Include="System.Transactions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -40,25 +48,25 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Entities\BankAccount.cs" />
-    <Compile Include="Entities\BaseAccount.cs" />
-    <Compile Include="Entities\GoldAccount.cs" />
-    <Compile Include="Entities\PlatinumAccount.cs" />
-    <Compile Include="Entities\TypeBankAccount.cs" />
-    <Compile Include="Exceptions\NotEnoughMoneyException.cs" />
-    <Compile Include="Interfaces\IBankAccountFactory.cs" />
-    <Compile Include="Interfaces\IBankAccountMapper.cs" />
-    <Compile Include="Interfaces\IBankAccountService.cs" />
-    <Compile Include="Interfaces\ICalculatorBonusPoints.cs" />
-    <Compile Include="Interfaces\IGeneratorId.cs" />
+    <Compile Include="BussinesModel\ConcreateLogger.cs" />
+    <Compile Include="BussinesModel\UrlHelper.cs" />
+    <Compile Include="BussinesModel\XmlSaver.cs" />
+    <Compile Include="BussinesModel\UrlsSource.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="BussinesModel\UrlToXml.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <ProjectReference Include="..\ExportToXML.Interface\ExportToXML.Interface.csproj">
+      <Project>{bca11b6a-a58b-4595-96b5-ffa3bb6918ef}</Project>
+      <Name>ExportToXML.Interface</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Analyzer Include="..\packages\StyleCop.Analyzers.1.0.2\analyzers\dotnet\cs\StyleCop.Analyzers.CodeFixes.dll" />
-    <Analyzer Include="..\packages\StyleCop.Analyzers.1.0.2\analyzers\dotnet\cs\StyleCop.Analyzers.dll" />
+    <None Include="NLog.config" />
+    <None Include="NLog.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <Resource Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
