--- a/NET.S.2018.Novik.16/ExportToXML/ExportToXML.csproj
+++ b/NET.S.2018.Novik.16/ExportToXML/ExportToXML.csproj
@@ -48,12 +48,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BussinesModel\ConcreateLogger.cs" />
+    <Compile Include="BussinesModel\NLogger.cs" />
     <Compile Include="BussinesModel\UrlHelper.cs" />
     <Compile Include="BussinesModel\XmlSaver.cs" />
-    <Compile Include="BussinesModel\UrlsSource.cs" />
+    <Compile Include="BussinesModel\UrlFromTextFile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="BussinesModel\UrlToXml.cs" />
+    <Compile Include="BussinesModel\ConverterURLtoXML.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ExportToXML.Interface\ExportToXML.Interface.csproj">
@@ -67,6 +67,10 @@
       <SubType>Designer</SubType>
     </None>
     <Resource Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Analyzer Include="..\packages\StyleCop.Analyzers.1.0.2\analyzers\dotnet\cs\StyleCop.Analyzers.CodeFixes.dll" />
+    <Analyzer Include="..\packages\StyleCop.Analyzers.1.0.2\analyzers\dotnet\cs\StyleCop.Analyzers.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
