--- a/NET.S.2018.Novik.16/ExportToXML/NLog.config
+++ b/NET.S.2018.Novik.16/ExportToXML/NLog.config
@@ -5,37 +5,14 @@
       autoReload="true"
       throwExceptions="false"
       internalLogLevel="Off" internalLogFile="c:\temp\nlog-internal.log">
-
-  <!-- optional, add some variables
-  https://github.com/nlog/NLog/wiki/Configuration-file#variables
-  -->
-  <variable name="myvar" value="myvalue"/>
-
-  <!--
-  See https://github.com/nlog/nlog/wiki/Configuration-file
-  for information on customizing logging rules and outputs.
-   -->
+  <variable name="basedir" value="storagelogs"/>
   <targets>
-
-    <!--
-    add your targets here
-    See https://github.com/nlog/NLog/wiki/Targets for possible targets.
-    See https://github.com/nlog/NLog/wiki/Layout-Renderers for the possible layout renderers.
-    -->
-
-    <!--
-    Write events to a file with the date in the filename.
-    <target xsi:type="File" name="f" fileName="${basedir}/logs/${shortdate}.log"
-            layout="${longdate} ${uppercase:${level}} ${message}" />
-    -->
+    <target xsi:type="File" name="FileDebugLogs" fileName="/logs/debuglogs.txt"/>
+    <target xsi:type="File" name="FileInfoLogs" fileName="/logs/infologs.txt"/>
   </targets>
 
   <rules>
-    <!-- add your logging rules here -->
-
-    <!--
-    Write all events with minimal level of Debug (So Debug, Info, Warn, Error and Fatal, but not Trace)  to "f"
-    <logger name="*" minlevel="Debug" writeTo="f" />
-    -->
+    <logger name="*" minlevel="Debug" writeTo="FileDebugLogs" />
+    <logger name="*" minlevel="Warn" writeTo="FileInfoLogs" />
   </rules>
 </nlog>
